--- a/packages/insight/src/components/head-nav/head-nav.scss
+++ b/packages/insight/src/components/head-nav/head-nav.scss
@@ -35,7 +35,7 @@ head-nav {
           margin-top: 4px;
           padding: 9px 12px;
           color: color($colors, light);
-          background-color: #7CAD23;
+          background-color: #7d1c7d; 
           border: 0;
           box-shadow: 1px 1px 0 0 rgba(255,255,255,.41), inset 1px 1px 3px 0 rgba(0,0,0,.10);
         }
